5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4138/executions/1593_1803.log
== TEST (2019-03-28 10:05:38) 
-- CODE:
C = int(input("digite sua conta bancária:"))
C1 = C//10 - (C//100) * 10
Ci = C1 * 2
print(C1)
-- OUTPUT:
30.48
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 10:05:56) 
-- CODE:
C = int(input("digite sua conta bancária:"))
C1 = C//10 - (C//100) * 10
Ci = C1 * 2
print(C1)
-- OUTPUT:
30.48
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 10:06:04) 
-- CODE:
C = int(input("digite sua conta bancaria:"))
C1 = C//10 - (C//100) * 10
Ci = C1 * 2
print(C1)
-- OUTPUT:
30.48
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 10:07:11) 
-- CODE:
C = int(input("digite sua conta bancaria:"))
C1 = C//10 - (C//100) * 10
ci = C % C1
print(ci)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    ci = C % C1
ZeroDivisionError: integer division or modulo by zero
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 10:15:27) 
-- CODE:
C = int(input("digite sua conta bancaria:"))
C1 = C//1000
Ci = C1 * 5
C2 = C//100 - 10
Cii = C2 * 4
C3 = C//10 - (C//10 - C1)
print(C1,C2,C3)
-- OUTPUT:
2 10 2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 10:15:46) 
-- CODE:
C = int(input("digite sua conta bancaria:"))
C1 = C//1000
Ci = C1 * 5
C2 = C//100 - 10
Cii = C2 * 4
C3 = C//10 - (C//10 - C1)
print(C3)
-- OUTPUT:
2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 10:16:06) 
-- CODE:
C = int(input("digite sua conta bancaria:"))
C1 = C//1000
Ci = C1 * 5
C2 = C//100 - 10
Cii = C2 * 4
C3 = C//10 
print(C3)
-- OUTPUT:
200
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 10:17:04) 
-- CODE:
C = int(input("digite sua conta bancaria:"))
C1 = C//1000
Ci = C1 * 5
C2 = C//100 - 10
Cii = C2 * 4
C3 = C//10 -()
print(C2)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    C3 = C//10 -()
TypeError: unsupported operand type(s) for -: 'int' and 'tuple'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 10:17:15) 
-- CODE:
C = int(input("digite sua conta bancaria:"))
C1 = C//1000
Ci = C1 * 5
C2 = C//100 - 10
Cii = C2 * 4
C3 = C//10
print(C2)
-- OUTPUT:
10
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 10:25:24) 
-- CODE:
C = int(input("digite sua conta bancaria:"))
C1 = C//1000
Ci = C1 * 5
C2 = C//100 - (C1*10)
Cii = C2 * 4
C3 = C//10 - (C//100) * 10
Ciii = C3 * 3
C4 = 
print(C1,C2,C3)
-- ERROR:
File "XXXX", line 8
    C4 = 
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 10:26:39) 
-- CODE:
C = int(input("digite sua conta bancaria:"))
C1 = C//1000
Ci = C1 * 5
C2 = C//100 - (C1*10)
Cii = C2 * 4
C3 = C//10 - (C//100) * 10
Ciii = C3 * 3
C4 = C1 % C3
print(C1,C2,C3,C4)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    C4 = C1 % C3
ZeroDivisionError: integer division or modulo by zero
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 10:28:42) 
-- CODE:
C = int(input("digite sua conta bancaria:"))
C1 = C//1000
Ci = C1 * 5
C2 = C//100 - (C1*10)
Cii = C2 * 4
C3 = C//10 - (C//100) * 10
Ciii = C3 * 3
C4 = C % C3
print(C1,C2,C3,C4)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    C4 = C % C3
ZeroDivisionError: integer division or modulo by zero
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 10:30:11) 
-- CODE:
C = int(input("digite sua conta bancaria:"))
C1 = C//1000
Ci = C1 * 5
C2 = C//100 - (C1*10)
Cii = C2 * 4
C3 = C//10 - (C//100) * 10
Ciii = C3 * 3
C4 = C % C3
print(C1,C2,C3,C4)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    C4 = C % C3
ZeroDivisionError: integer division or modulo by zero
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 10:31:56) 
-- CODE:
C = int(input("digite sua conta bancaria:"))
C1 = C//1000
Ci = C1 * 5
C2 = C//100 - (C1*10)
Cii = C2 * 4
C3 = C//10 - (C//100) * 10
Ciii = C3 * 3
C4 = C % (C//10)
print(C1,C2,C3,C4)
-- OUTPUT:
2 0 0 0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-28 10:34:18) 
-- CODE:
C = int(input("digite sua conta bancaria:"))
C1 = C//1000
Ci = C1 * 5
C2 = C//100 - (C1*10)
Cii = C2 * 4
C3 = C//10 - (C//100) * 10
Ciii = C3 * 3
C4 = C % (C//10)
Civ = C4 * 2
Ct = (Ci + Cii + Ciii + Civ)
DV = Ct % 11
print(DV)
-- EXECUTION TIME:
0.136075
-- TEST CASE 1:
---- input:
2000
---- correct output:
10
---- user output:
10
-- TEST CASE 2:
---- input:
3550
---- correct output:
6
---- user output:
6
-- TEST CASE 3:
---- input:
0007
---- correct output:
3
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 10:34:20) 
-- CODE:
C = int(input("digite sua conta bancaria:"))
C1 = C//1000
Ci = C1 * 5
C2 = C//100 - (C1*10)
Cii = C2 * 4
C3 = C//10 - (C//100) * 10
Ciii = C3 * 3
C4 = C % (C//10)
Civ = C4 * 2
Ct = (Ci + Cii + Ciii + Civ)
DV = Ct % 11
print(DV)
-- OUTPUT:
10
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-28 10:34:29) 
-- CODE:
C = int(input("digite sua conta bancaria:"))
C1 = C//1000
Ci = C1 * 5
C2 = C//100 - (C1*10)
Cii = C2 * 4
C3 = C//10 - (C//100) * 10
Ciii = C3 * 3
C4 = C % (C//10)
Civ = C4 * 2
Ct = (Ci + Cii + Ciii + Civ)
DV = Ct % 11
print(DV)
-- EXECUTION TIME:
0.135212
-- TEST CASE 1:
---- input:
2000
---- correct output:
10
---- user output:
10
-- TEST CASE 2:
---- input:
3550
---- correct output:
6
---- user output:
6
-- TEST CASE 3:
---- input:
0007
---- correct output:
3
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 10:34:44) 
-- CODE:
C = int(input("digite sua conta bancaria:"))
C1 = C//1000
Ci = C1 * 5
C2 = C//100 - (C1*10)
Cii = C2 * 4
C3 = C//10 - (C//100) * 10
Ciii = C3 * 3
C4 = C % (C//10)
Civ = C4 * 2
Ct = (Ci + Cii + Ciii + Civ)
DV = Ct % 11
print(DV)
-- OUTPUT:
10
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-28 10:35:09) 
-- CODE:
C = int(input("digite sua conta bancaria:"))
C1 = C//1000
Ci = C1 * 5
C2 = C//100 - (C1*10)
Cii = C2 * 4
C3 = C//10 - (C//100) * 10
Ciii = C3 * 3
C4 = C % 10
Civ = C4 * 2
Ct = (Ci + Cii + Ciii + Civ)
DV = Ct % 11
print(DV)
-- EXECUTION TIME:
0.218647
-- TEST CASE 1:
---- input:
2000
---- correct output:
10
---- user output:
digite sua conta bancaria:10
-- TEST CASE 2:
---- input:
3550
---- correct output:
6
---- user output:
digite sua conta bancaria:6
-- TEST CASE 3:
---- input:
0007
---- correct output:
3
---- user output:
digite sua conta bancaria:3
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 10:35:11) 
-- CODE:
C = int(input("digite sua conta bancaria:"))
C1 = C//1000
Ci = C1 * 5
C2 = C//100 - (C1*10)
Cii = C2 * 4
C3 = C//10 - (C//100) * 10
Ciii = C3 * 3
C4 = C % 10
Civ = C4 * 2
Ct = (Ci + Cii + Ciii + Civ)
DV = Ct % 11
print(DV)
-- OUTPUT:
10
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-28 10:36:10) 
-- CODE:
C = int(input("digite sua conta bancaria:"))
C1 = C//1000
Ci = C1 * 5
C2 = C//100 - (C1*10)
Cii = C2 * 4
C3 = C//10 - (C//100) * 10
Ciii = C3 * 3
C4 = C % 10
Civ = C4 * 2
Ct = (Ci + Cii + Ciii + Civ)
DV = Ct % 11
print(DV)
-- EXECUTION TIME:
0.26071
-- TEST CASE 1:
---- input:
2000
---- correct output:
10
---- user output:
10
-- TEST CASE 2:
---- input:
3550
---- correct output:
6
---- user output:
6
-- TEST CASE 3:
---- input:
0007
---- correct output:
3
---- user output:
3
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
